Hello World adicionado na pasta do projeto 1

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Projeto 01 Inicio/Carro/nbproject/private/
 /Projeto 01 Inicio/Carro/build/
+/Projeto 01 Inicio/HelloWord/nbproject/private/
+/Projeto 01 Inicio/HelloWord/build/
