Pastas renomeadas e adicionado o código da Jornada do Calango (Funcional)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 /Projeto 01 Inicio/Carro/build/
 /Projeto 01 Inicio/HelloWord/nbproject/private/
 /Projeto 01 Inicio/HelloWord/build/
+/Projeto 01 Java - Hello Word & Teste Carro/Carro/build/
+/Projeto 01 Java - Hello Word & Teste Carro/Carro/nbproject/private/
+/Projeto 01 Java - Hello Word & Teste Carro/HelloWord/build/
+/Projeto 01 Java - Hello Word & Teste Carro/HelloWord/nbproject/private/
+/Projeto 02 Java - A jornada do Herói/Jornada/nbproject/private/
+/Projeto 02 Java - A jornada do Herói/Jornada/build/
+/Projeto 02 Java - A jornada do Herói/calango_journey/nbproject/private/
+/Projeto 02 Java - A jornada do Herói/calango_journey/build/
