--- a/Projeto 02 Java - Calango Versus Dungeon/Calango Versus/build.xml
+++ b/Projeto 02 Java - Calango Versus Dungeon/Calango Versus/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Jornada" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Jornada.</description>
+<project name="Calango_Versus" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Calango Versus.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Jornada-impl.jar">
+        <target name="run" depends="Calango_Versus-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
