--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /Projeto 02 Java - A jornada do Herói/Jornada/build/
 /Projeto 02 Java - A jornada do Herói/calango_journey/nbproject/private/
 /Projeto 02 Java - A jornada do Herói/calango_journey/build/
+/Projeto 03 Java -/Lapiseira/nbproject/private/
+/Projeto 03 Java - Arma/Pistola/nbproject/private/
+/Projeto 03 Java - Arma/Pistola/build/
