Tamagotchi adicionado e relatório pistola adicionado

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /Projeto 03 Java -/Lapiseira/nbproject/private/
 /Projeto 03 Java - Arma/Pistola/nbproject/private/
 /Projeto 03 Java - Arma/Pistola/build/
+/Tamagotchi/Tamagotchi/nbproject/private/
+/Tamagotchi/Tamagotchi/build/
