--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@
 /Projeto 03 Java - Arma/Pistola/build/
 /Tamagotchi/Tamagotchi/nbproject/private/
 /Tamagotchi/Tamagotchi/build/
+/Projeto 04 Java - ArrayList/JavaApplication23/nbproject/private/
+/Projeto 04 Java - ArrayList/Contatos/nbproject/private/
+/Projeto 06 ArrayList - Tarifas/nbproject/private/
+/Projeto 05 Java - Contato/Contatos/nbproject/private/
+/Tarifas/nbproject/private/
+/Projeto 06 Java - Tarifas/Tarifas/build/
