Código da Topic adicionado junto com  relatório

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /Projeto 05 Java - Contato/Contatos/nbproject/private/
 /Tarifas/nbproject/private/
 /Projeto 06 Java - Tarifas/Tarifas/build/
+/Projeto 07 Java - Topic de Luxo/Topic/nbproject/private/
+/Projeto 07 Java - Topic de Luxo/Topic/build/
