--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@
 /Projeto 06 Java - Tarifas/Tarifas/build/
 /Projeto 07 Java - Topic de Luxo/Topic/nbproject/private/
 /Projeto 07 Java - Topic de Luxo/Topic/build/
+/Projeto 08 Java - Busca/Busca/nbproject/private/
+/Projeto 08 Java - Busca/Busca/build/
+/Projeto 08 Java - Busca/Agenda/nbproject/private/
