Projeto Busca atualizado, incompleto

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /Projeto 10 Java - Polimorfismo/CodigoExcessao/build/
 /Projeto 10 Java - Polimorfismo/Excessao/nbproject/private/
 /Projeto 10 Java - Polimorfismo/Excessao/build/
+/Projeto 08 Java - Busca/Agenda/build/
