Código de busca concluido corretamente

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /Projeto 10 Java - Polimorfismo/Excessao/nbproject/private/
 /Projeto 10 Java - Polimorfismo/Excessao/build/
 /Projeto 08 Java - Busca/Agenda/build/
+/Java Busca/Agenda/nbproject/private/
+/Java Busca/Agenda/build/
