--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /Projeto 08 Java - Busca/Agenda/build/
 /Java Busca/Agenda/nbproject/private/
 /Java Busca/Agenda/build/
+/Projeto 09 Java - Mapas/Favoritos/build/
