Código Contato Star adicionado

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /Java Busca/Agenda/nbproject/private/
 /Java Busca/Agenda/build/
 /Projeto 09 Java - Mapas/Favoritos/build/
+/Projeto 11 Java - Contatostar/ContatoStar/nbproject/private/
+/Projeto 11 Java - Contato Star/ContatoStar/build/
