Código Tweeter adicionado

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /Projeto 09 Java - Mapas/Favoritos/build/
 /Projeto 11 Java - Contatostar/ContatoStar/nbproject/private/
 /Projeto 11 Java - Contato Star/ContatoStar/build/
+/Projeto 12 Java - Twitter/Twitter/nbproject/private/
+/Projeto 12 Java - Twitter/Twitter/build/
